--- a/templates/base-dashboard.html.twig
+++ b/templates/base-dashboard.html.twig
@@ -18,6 +18,7 @@
             <link href="{{ asset('back-office/plugins/datatables.net-bs5/css/dataTables.bootstrap5.min.css') }}" rel="stylesheet" />
             <link href="{{ asset('back-office/plugins/datatables.net-responsive-bs5/css/responsive.bootstrap5.min.css') }}" rel="stylesheet" />
             <link href="{{ asset('back-office/plugins/datatables.net-buttons-bs5/css/buttons.bootstrap5.min.css') }}" rel="stylesheet" />
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
             
             
         {% endblock %}
@@ -159,9 +160,9 @@
                             Navigation                    
                         </div>
                         <div class="menu-item">
-                            <a href="index-2.html" class="menu-link">
+                            <a href="{{ path('new_user_index') }}" class="menu-link">
                                 <span class="menu-icon">
-                                    <i class="bi bi-cpu"></i>
+                                    <i class="bi bi-people"></i>
                                 </span>
                                 <span class="menu-text">
                                     Users                                                              
@@ -169,32 +170,12 @@
                             </a>
                         </div>
                         <div class="menu-item">
-                            <a href="analytics.html" class="menu-link">
+                            <a href="{{ path('departement_index') }}" class="menu-link">
                                 <span class="menu-icon">
-                                    <i class="bi bi-bar-chart"></i>
+                                    <i class="bi bi-person-workspace"></i>
                                 </span>
                                 <span class="menu-text">
                                     Departments                                                             
-                                </span>
-                            </a>
-                        </div>
-                        <div class="menu-item">
-                            <a href="analytics.html" class="menu-link">
-                                <span class="menu-icon">
-                                    <i class="bi bi-bar-chart"></i>
-                                </span>
-                                <span class="menu-text">
-                                    Blogs                              
-                                </span>
-                            </a>
-                        </div>
-                        <div class="menu-item">
-                            <a href="analytics.html" class="menu-link">
-                                <span class="menu-icon">
-                                    <i class="bi bi-bar-chart"></i>
-                                </span>
-                                <span class="menu-text">
-                                    Posts                            
                                 </span>
                             </a>
                         </div>
@@ -227,10 +208,11 @@
               lengthMenu: [ 10, 20, 30, 40, 50],
               responsive: true,
               buttons: [ 
-                { extend: 'print', className: 'btn btn-secondary' },
+                { extend: 'print', className: 'btn btn-secondary ml-2', },
 
               ]
             });
+            
           </script>
           <link href="{{ asset('back-office/css/app.min.css') }}" rel="stylesheet" />
         <script data-cfasync="false" src="{{ asset('back-office/js/email-decode.min.js') }}"></script>
